LPS-71915 control-menu Updated text overflow issues on control menu.

--- a/modules/apps/web-experience/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
+++ b/modules/apps/web-experience/product-navigation/product-navigation-product-menu-theme-contributor/src/main/resources/META-INF/resources/product_navigation_product_menu.scss
@@ -43,6 +43,18 @@ body {
 		max-height: 32px;
 		max-width: 32px;
 	}
+
+	.company-details {
+	    float: left;
+	    overflow: hidden;
+	    text-overflow: ellipsis;
+	    white-space: nowrap;
+	    width: calc(100% - 32px);
+
+	    @include sm {
+	        width: 100%;
+	    }
+	}
 }
 
 .product-menu {
